<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
>

  <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
    <Button android:id="@+id/btn_portrait"    style="@style/OrientationButton" android:text="@string/portrait" />
    <Button android:id="@+id/btn_landscape"   style="@style/OrientationButton" android:text="@string/landscape" />
    <Button android:id="@+id/btn_portrait_r"  style="@style/OrientationButton" android:text="@string/portrait_r" />
  </LinearLayout>
  <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
    <Button android:id="@+id/btn_landscape_r" style="@style/OrientationButton" android:text="@string/landscape_r" />
    <Button android:id="@+id/btn_auto"        style="@style/OrientationButton" android:text="@string/auto" />
    <Button android:id="@+id/btn_stop"        style="@style/OrientationButton" android:text="@string/stop" />
  </LinearLayout>

</LinearLayout>
